# LLP3

./: CMakeLists.txt  Makefile  client.cpp  client.h  sampleclient  sampleserver  server.cpp  server.h  spec.json
client/: .parser.tab.h.swp  CMakeLists.txt  aql_parser  ast.c  lex.yy.c  parser.tab.c  parser.tab.h  parser.y  show_tree.c  tokenizer.l
server/: CMakeLists.txt  Makefile  Makefile.linux  data_types.c  database.c  file.c  schema.c  table.c  test.c
server/include/: data_types.h  database_include.h  file.h  schema.h  table_include.h  test.h
server/struct/: database.h  query.h  table.h
